force-app/main/default/objects/Task_Details__c/Task_Details__c.object-meta.xml
<CustomObject>
    <description>Records are populated manually by admins for all the Task types created for various business lines. 
Refer to Case#06096317 for more details.</description>
    <label>Task Detail</label>
    <nameField>
        <label>Task#</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Task Details</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>