force-app/main/default/objects/Task_Details__c/fields/Dashboard_Bar_Name__c.field-meta.xml
<CustomField>
    <fullName>Dashboard_Bar_Name__c</fullName>
    <label>Dashboard Bar Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>01 Escalate</fullName>
            </value>
            <value>
                <fullName>02 Agn CtRw CSA</fullName>
            </value>
            <value>
                <fullName>03 Agn NCSP CSA</fullName>
            </value>
            <value>
                <fullName>04 Contr Review</fullName>
            </value>
            <value>
                <fullName>05 CID Request</fullName>
            </value>
            <value>
                <fullName>06 SKP SFDC S/p</fullName>
            </value>
            <value>
                <fullName>07 Upd DMS ShPt</fullName>
            </value>
            <value>
                <fullName>08 Snd Ct-Ct Ad</fullName>
            </value>
            <value>
                <fullName>09 Ct Adm Revew</fullName>
            </value>
            <value>
                <fullName>10 Asn NCSP Que</fullName>
            </value>
            <value>
                <fullName>11 Confrm Order</fullName>
            </value>
            <value>
                <fullName>12 DP SFDC S/up</fullName>
            </value>
            <value>
                <fullName>13 Welcm Fol/up</fullName>
            </value>
            <value>
                <fullName>14 Welcm Call 1</fullName>
            </value>
            <value>
                <fullName>15 Place Orders</fullName>
            </value>
            <value>
                <fullName>16 Welcm Pcket</fullName>
            </value>
            <value>
                <fullName>17 IMC Set-up</fullName>
            </value>
            <value>
                <fullName>18 IMC Logn Snt</fullName>
            </value>
            <value>
                <fullName>19 Asn - DMS Gp</fullName>
            </value>
            <value>
                <fullName>20 Vist Profile</fullName>
            </value>
            <value>
                <fullName>21 SS Training</fullName>
            </value>
            <value>
                <fullName>22 Transition</fullName>
            </value>
            <value>
                <fullName>23 Ordr FF</fullName>
            </value>
            <value>
                <fullName>24 Rstr PS</fullName>
            </value>
            <value>
                <fullName>25 Accutrac</fullName>
            </value>
            <value>
                <fullName>26 Invoice Review</fullName>
            </value>
            <value>
                <fullName>Asgn Ctr Rw CSA</fullName>
            </value>
            <value>
                <fullName>Asgn NCSP CSA</fullName>
            </value>
            <value>
                <fullName>Asgn to DMS Gp</fullName>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>