force-app/main/default/objects/Task_Details__c/fields/Include_In_Dashboard__c.field-meta.xml
<CustomField>
    <fullName>Include_In_Dashboard__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Include In Dashboard</label>
    <type>Checkbox</type>
</CustomField>