force-app/main/default/objects/Task_Details__c/fields/Mandatory_Task__c.field-meta.xml
<CustomField>
    <fullName>Mandatory_Task__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Mandatory Task</label>
    <type>Checkbox</type>
</CustomField>