force-app/main/default/objects/Task_Details__c/fields/Sub_Area__c.field-meta.xml
<CustomField>
    <fullName>Sub_Area__c</fullName>
    <label>Sub-Area</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Business_area__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>CLOSURE</fullName>
            </value>
            <value>
                <fullName>Contract Administration</fullName>
            </value>
            <value>
                <fullName>Contract Review Team</fullName>
            </value>
            <value>
                <fullName>Coordinator</fullName>
            </value>
            <value>
                <fullName>DB&amp;R</fullName>
            </value>
            <value>
                <fullName>NCSP</fullName>
            </value>
            <value>
                <fullName>NCSP: DB&amp;R</fullName>
            </value>
            <value>
                <fullName>NCSP: Department Add only</fullName>
            </value>
            <value>
                <fullName>NCSP: DMS</fullName>
            </value>
            <value>
                <fullName>NCSP: New Customer Setup</fullName>
            </value>
            <value>
                <fullName>NCSP: Tech Services</fullName>
            </value>
            <value>
                <fullName>NCSP: Upsell</fullName>
            </value>
            <value>
                <fullName>NCSP CSA</fullName>
            </value>
            <value>
                <fullName>RETENTION</fullName>
            </value>
            <value>
                <fullName>SKP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>