force-app/main/default/objects/Task_Details__c/validationRules/Business_Hours_Selection.validationRule-meta.xml
<ValidationRule>
    <fullName>Business_Hours_Selection</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(SLA_Time_Type__c, &apos;Business&apos;) ,  Business_Hours__c == null)</errorConditionFormula>
    <errorDisplayField>Business_Hours__c</errorDisplayField>
    <errorMessage>Define Business Hours for Business SLA Time Type</errorMessage>
</ValidationRule>