force-app/main/default/objects/Task_Details__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Subject__c</columns>
    <columns>SLA__c</columns>
    <columns>Business_area__c</columns>
    <columns>Sub_Area__c</columns>
    <columns>Business_Hours__c</columns>
    <columns>Dashboard_Bar_Name__c</columns>
    <columns>Group_Name__c</columns>
    <columns>Description__c</columns>
    <columns>Include_In_Dashboard__c</columns>
    <columns>SLA_Time_Type__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Unique_Task__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>